<resources>
    <string name="facebook_app_id">318949948473554</string>
    <string name="app_name">MovemberWeapon</string>
    <string name="take_photo_text">Open Camera</string>
    <string name="select_from_gallery_text">Select from gallery</string>
    <string name="select_photo_dialog__title_text">Select Photo</string>
    <string name="device_not_supported_text">Device not supported</string>
    <string name="choose_weapon_text">Choose your weapon</string>
    <string name="in_progress_text">In Progress</string>
    <string name="network_error_text">Check your internet connectivity</string>
    <string name="confirmation_title_message_text">Facebook post</string>
    <string name="confirmation_dialog_message_text">Movember Weapon app wants to post on Facebook Movember page</string>
    <string name="yes_text">Confirm</string>
    <string name="no_text">Cancel</string>
    <string name="pledge_text_content">This is my Movember Weapon</string>
    <string name="swipe_right_information_text">Please swipe right to continue</string>

    <string-array name="image_array_list">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>

    <string-array name="name_array_list">
        <item>THE TRUCKER</item>
        <item>THE REGENT</item>
        <item>THE BOX CAR</item>
        <item>THE CONNOISSEUR</item>
        <item>THE ABRACADABRA</item>
        <item>THE WISP</item>
        <item>THE UNDERCOVER</item>
        <item>THE ROCKSTAR</item>
        <item>THE AFTER EIGHT</item>
    </string-array>

    <string name="help_text1">1. Enter the Doctor Name without \“DR/Dr\”, speciality &amp; location. Submit the details.</string>
    <string name="help_text2">2. Click the option of  ”Open Camera”. Use either photo library or open camera to capture the image. Proceed if the image is as per your expectation.</string>
    <string name="help_text3">3. Request the doctor to choose the moustache from the provided catalogue. The moustache can be dragged and placed at the correct position. Click on ‘ok’.</string>
    <string name="help_text4">4. Share the image in facebook.</string>
    <string name="help">Help</string>

</resources>
